# dbeaver-gcloud-free

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
