[project]
name = "dbeaver-gcloud-free"
version = "0.1.0"
description = "Free local alternative to DBeaver's paid Google Cloud token flow."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ruslan Khasanshin" }]
maintainers = [{ name = "Ruslan Khasanshin" }]

dependencies = ["pydantic>=2.13.4", "pyyaml>=6.0.3", "questionary>=2.1.1"]

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "deptry>=0.25.1",
  "prek>=0.4.5",
  "pysentry-rs>=0.4.6",
  "ruff>=0.15.17",
  "ty>=0.0.49",
]

[project.scripts]
dbgc = "main:main"

[tool.uv]
default-groups = ["dev"]
link-mode = "copy"

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "ARG",
  "PL",
  "RUF",
  "C4",
  "FA",
  "N",
  "PERF",
  "W",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pysentry.defaults]
fail_on = "low"

[tool.pysentry.sources]
enabled = ["pypa", "pypi", "osv"]

[tool.deptry]
known_first_party = ["main"]

[tool.vulture]
paths = ["main.py"]
min_confidence = 100
sort_by_size = true
